--- a/3_HTSProject/war/__HTSProject.css
+++ b/3_HTSProject/war/__HTSProject.css
@@ -20,6 +20,11 @@ h1 {
 	font-weight: bold;
 }
 
+.cw-DockPanel td {
+  border: 1px solid #BBBBBB;
+  padding: 3px;
+}
+
 .gwt-roomname{ 
    font-size: 100%; 
    font-weight: bold;
